--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -15,8 +15,11 @@
         <a href="">
             <img src="../assets/img/rapstyle.png" class="logo" alt="logo-de-la-pagina">
         </a>
-
-        <nav>
+        <input type="checkbox" id="menu"/>
+        <label for="menu">
+            <img src="../assets/img/lista.png" class="menu-icono" alt="lista-img">
+        </label>
+        <nav class="navbar">
             
             <ul>
                 <li><a href="../index.html">INICIO</a></li>
@@ -41,10 +44,10 @@
                 <ul>
                     <li><a href="https://www.instagram.com/" target="_blank"><img class="red-social" src="../assets/img/instagram.png" alt="logo-whatsapp">@ig.rapstyle</a></li>
                     <li><a href="https://www.facebook.com/" target="_blank"><img class="red-social" src="../assets/img/facebook.png" alt="logo-facebook">@fb.rapstyle</a></li>
-                    <li><a href="https://www.whatsapp.com/" target="_blank"><img class="red-social" src="../assets/img/whatsapp.png" alt="logo-instagram"></a></li>
+                    <li><a href="https://www.whatsapp.com/" target="_blank"><img class="red-social" src="../assets/img/whatsapp.png" alt="logo-instagram">Contactanos</a></li>
                 </ul>
             </div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.383257381771!2d-64.22613902498334!3d-31.40356509563061!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x943298bebf5028c1%3A0x32c4a5fc0f3c3cf1!2sDe%C3%A1n%20Funes%203200%2C%20X5003CWF%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1709753598520!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.383257381771!2d-64.22613902498334!3d-31.40356509563061!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x943298bebf5028c1%3A0x32c4a5fc0f3c3cf1!2sDe%C3%A1n%20Funes%203200%2C%20X5003CWF%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1709753598520!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
 
