--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -15,8 +15,12 @@
         <a href="">
             <img src="../assets/img/rapstyle.png" class="logo" alt="logo-de-la-pagina">
         </a>
+        <input type="checkbox" id="menu"/>
+        <label for="menu">
+            <img src="../assets/img/lista.png" class="menu-icono" alt="lista-img">
+        </label>
 
-        <nav>
+        <nav class="navbar">
             
             <ul>
                 <li><a href="../index.html">INICIO</a></li>
