--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -22,11 +22,11 @@
         <nav class="navbar">
             
             <ul>
-                <li><a href="../index.html">INICIO</a></li>
-                <li><a href="./remeras.html">REMERAS</a></li>
-                <li><a href="./buzos.html">BUZOS</a></li>
-                <li><a href="./marcas.html">MARCAS</a></li>
-                <li><a href="./nosotros.html">NOSOTROS</a></li>
+                <li><a class="neon-texto" href="../index.html">INICIO</a></li>
+                <li><a class="neon-texto" href="./remeras.html">REMERAS</a></li>
+                <li><a class="neon-texto" href="./buzos.html">BUZOS</a></li>
+                <li><a class="neon-texto" href="./marcas.html">MARCAS</a></li>
+                <li><a class="neon-texto" href="./nosotros.html">NOSOTROS</a></li>
             </ul>
         </nav>
 
@@ -42,9 +42,9 @@
                 <p>Dean Funes 3300, Cordoba. <br> Tel.: +54 351 7598767 <br>rapstylecontact@gmail.com</p>
                 <p>Somos una empresa argentina que ofrece prendas urbanas de la mejor calidad y nos enfocamos en la originalidad de cada uno "Expresa tu autenticidad con RapStyle." </p>
                 <ul>
-                    <li><a href="https://www.instagram.com/" target="_blank"><img class="red-social" src="../assets/img/instagram.png" alt="logo-whatsapp">@ig.rapstyle</a></li>
-                    <li><a href="https://www.facebook.com/" target="_blank"><img class="red-social" src="../assets/img/facebook.png" alt="logo-facebook">@fb.rapstyle</a></li>
-                    <li><a href="https://www.whatsapp.com/" target="_blank"><img class="red-social" src="../assets/img/whatsapp.png" alt="logo-instagram">Contactanos</a></li>
+                    <li><a class="neon-texto" href="https://www.instagram.com/" target="_blank"><img class="red-social" src="../assets/img/instagram.png" alt="logo-whatsapp">@ig.rapstyle</a></li>
+                    <li><a class="neon-texto" href="https://www.facebook.com/" target="_blank"><img class="red-social" src="../assets/img/facebook.png" alt="logo-facebook">@fb.rapstyle</a></li>
+                    <li><a class="neon-texto" href="https://www.whatsapp.com/" target="_blank"><img class="red-social" src="../assets/img/whatsapp.png" alt="logo-instagram">Contactanos</a></li>
                 </ul>
             </div>
             <iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.383257381771!2d-64.22613902498334!3d-31.40356509563061!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x943298bebf5028c1%3A0x32c4a5fc0f3c3cf1!2sDe%C3%A1n%20Funes%203200%2C%20X5003CWF%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1709753598520!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -58,8 +58,8 @@
         <div>
             <p>Terminos y condiciones</p>
             <p>Politica de privacidad</p>
-            <img src="../assets/img/facebook.png" alt="logo-facebook">
-            <img src="../assets/img/instagram.png" alt="logo-instagram">
+            <a href="https://www.facebook.com/"><img src="../assets/img/facebook.png" alt="logo-facebook"></a>
+            <a href="https://www.instagram.com/"><img src="../assets/img/instagram.png" alt="logo-instagram"></a>
         </div>    
 
 </footer>
