--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
         <nav class="navbar">                    
             <ul>
-                <li><a href="./index.html">INICIO</a></li>
-                <li><a href="./pages/remeras.html">REMERAS</a></li>
-                <li><a href="./pages/buzos.html">BUZOS</a></li>
-                <li><a href="./pages/marcas.html">MARCAS</a></li>
-                <li><a href="./pages/nosotros.html">NOSOTROS</a></li>
+                <li><a class="neon-texto" href="./index.html">INICIO</a></li>
+                <li><a class="neon-texto" href="./pages/remeras.html">REMERAS</a></li>
+                <li><a class="neon-texto" href="./pages/buzos.html">BUZOS</a></li>
+                <li><a class="neon-texto" href="./pages/marcas.html">MARCAS</a></li>
+                <li><a class="neon-texto" href="./pages/nosotros.html">NOSOTROS</a></li>
             </ul>
         </nav>
 
@@ -37,7 +37,7 @@
 
 <main>
         <h1>INICIO</h1>
-    <section>
+    <section class="section-principal">
         
         <div class="div-buzo-inicio">
             <img src="./assets/img/buzoinicio.png" alt="buzo-inicio">
@@ -82,12 +82,12 @@
 </main>
 
 <footer>
-
+    
         <div>
             <p>Terminos y condiciones</p>
             <p>Politica de privacidad</p>
-            <img src="./assets/img/facebook.png" alt="logo-facebook">
-            <img src="./assets/img/instagram.png" alt="logo-instagram">
+            <a href="https://www.facebook.com/"> <img src="./assets/img/facebook.png" alt="logo-facebook"> </a>
+            <a href="https://www.instagram.com/"> <img src="./assets/img/instagram.png" alt="logo-instagram"></a>
         </div>    
 
 </footer>
