--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -22,11 +22,11 @@
         <nav class="navbar">
             
             <ul>
-                <li><a href="../index.html">INICIO</a></li>
-                <li><a href="./remeras.html">REMERAS</a></li>
-                <li><a href="./buzos.html">BUZOS</a></li>
-                <li><a href="./marcas.html">MARCAS</a></li>
-                <li><a href="./nosotros.html">NOSOTROS</a></li>
+                <li><a class="neon-texto" href="../index.html">INICIO</a></li>
+                <li><a class="neon-texto" href="./remeras.html">REMERAS</a></li>
+                <li><a class="neon-texto" href="./buzos.html">BUZOS</a></li>
+                <li><a class="neon-texto" href="./marcas.html">MARCAS</a></li>
+                <li><a class="neon-texto" href="./nosotros.html">NOSOTROS</a></li>
             </ul>
         </nav>
 
@@ -104,8 +104,8 @@
         <div>
             <p>Terminos y condiciones</p>
             <p>Politica de privacidad</p>
-            <img src="../assets/img/facebook.png" alt="logo-facebook">
-            <img src="../assets/img/instagram.png" alt="logo-instagram">
+            <a href="https://www.facebook.com/"><img src="../assets/img/facebook.png" alt="logo-facebook"></a>
+            <a href="https://www.instagram.com/"><img src="../assets/img/instagram.png" alt="logo-instagram"></a>
         </div>    
 
 </footer>
